# logix

./: pyproject.toml
examples/language_modeling/: minimal_preconditioned_grads.py
examples/mnist/: compute_influences.py  compute_influences_distributed.py  compute_influences_manual.py
gradient_sae/: projection_test.py
logix/: __init__.py  config.py  logix.py  state.py  utils.py
logix/analysis/: influence_function.py  influence_function_utils.py
logix/logging/: log_loader.py  log_saver.py  logger.py  option.py
logix/statistic/: __init__.py
tests/analysis/: test_influence_function_utils.py
tests/examples/: test_compute_influences.py
tests/logger/: test_conv2d.py  test_mlp.py  test_option.py  test_transformer.py
tests/state/: test_state.py
tests/storage/: test_log_saver.py
