[project]
name = "logix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.19.1",
    "einops>=0.8.2",
    "numpy>=2.4.3",
    "pyyaml>=6.0.3",
    "torch>=2.6.0",
    "tqdm>=4.66.5",
    "transformers>=5.5.3",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.setuptools.packages.find]
include = ["logix*"]
